# rocketLauncher

./: .gitignore  .todo  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  contributing.md  index.md  index.rst  installation.md  make.bat  usage.md
rocket_launcher/: __init__.py  commons.py  config.ini  main.py
rocket_launcher/commands/: cookiecutters.py  settings.py
tests/: __init__.py  conftest.py  test_commons.py  test_cookiecutters.py  test_main.py  test_settings.py
