[tool.poetry]
name = "rocket_launcher"
version = "0.1.0"
description = "CLI for project automation. Create folder, add cookiecutter and create and commit to Github"
authors = ["drearondov <andrea.estefania.rv@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
exclude= ["rocket_launcher/config.ini"]

[tool.poetry.scripts]
rocketlauncher = "rocket_launcher.main:app"

[tool.poetry.dependencies]
python = ">=3.7, <4.0"
python-dotenv = "^0.15.0"
rich = "^9.10.0"
requests = "^2.25.1"
typer = "^0.3.2"
PyInquirer = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
factory-boy = "^3.2.0"
tox = "^3.21.4"
Sphinx = "^3.4.3"
bump2version = "^1.0.1"
watchdog = "^2.0.0"
coverage = "^5.4"
twine = "^3.3.0"
click = "^7.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
pytest-mock = "^3.5.1"
pytest-subprocess = "^1.0.0"
pytest-cov = "^2.11.1"
tox-pyenv = "^1.1.0"
recommonmark = "^0.7.1"
tox-travis = "^0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"